@@ -1,3 +1,5 @@
+- New feature: Support to define custom timeouts (connect and read) for each web service client [#UL-REIT-4063]
+
 2.6.0 (23-07-2024)
 - Improvement: Explicitly sets cipher provider [#qubIT-Omnis-6262]
 
